--- a/app/workouts/[id]/Workout.module.scss
+++ b/app/workouts/[id]/Workout.module.scss
@@ -21,7 +21,7 @@
        .exercisePageHeaderDemoMedia {
             min-width: 20rem;
             max-height: 100%;
-            flex: 1;
+            
 
            
             video {
